[package]
name = "cucumber-trellis-macro"
version = "0.1.3"
edition = "2021"
description = "Provide a macro for the Cucumber Trellis"
authors = ["Frédéric Meyer <frederic.meyer.77@gmail.com>"]
license = "MIT"
documentation = "https://docs.rs/cucumber-trellis-macro"
repository = "https://github.com/corebreaker/cucumber-trellis"
readme = "README.md"
keywords = ["cucumber", "testing", "bdd", "automation", "tdd"]
categories = ["development-tools::testing"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0.86" }
quote = { version = "1.0.36" }
syn = { version = "2.0.68", features = ["full"] }
